public/css/home.css
/* ... */
.contact-head {
    position: absolute;
    width: 376px;
    height: 90px;
    left: 61px;
    top: 48px;
    font-family: "Poppins";
    font-style: normal;
    font-weight: bold;
    font-size: 60px;
    line-height: 90px;
    /* identical to box height */
    text-decoration-line: underline;
    color: #FFFFFF;
}

.glass-box {
    position: absolute;
    width: 580px;
    height: 589px;
    left: 61px;
    top: 202px;

    background: #C4C4C4;
    opacity: 0.4;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    backdrop-filter: blur(50px);
    /* Note: backdrop-filter has minimal browser support */

    border-radius: 100px;
}

.contact-item-1 {
    position: absolute;
    width: 371px;
    height: 134px;
    left: 187px;
    top: 277px;

    font-family: "Poppins";
    font-style: normal;
    font-weight: normal;
    font-size: 30px;
    line-height: 45px;

    color: #000000;
}

.contact-item-2 {
    position: absolute;
    width: 371px;
    height: 56px;
    left: 187px;
    top: 440px;

    font-family: "Poppins";
    font-style: normal;
    font-weight: normal;
    font-size: 30px;
    line-height: 45px;
    text-decoration-line: underline;

    color: #000000;
}

.contact-item-3 {
    position: absolute;
    width: 371px;
    height: 63px;
    left: 187px;
    top: 525px;

    font-family: "Poppins";
    font-style: normal;
    font-weight: normal;
    font-size: 30px;
    line-height: 45px;

    color: #000000;

}

/* Hero section */

.logo{
  width: 20%;
}

a {
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
  color: #fd5f00; }
  a:hover, a:focus {
    text-decoration: none;
    color: #fd5f00;
    outline: none !important; }

h1, h2, h3, h4, h5,
.h1, .h2, .h3, .h4, .h5 {
  line-height: 1.5;
  color: rgba(0, 0, 0, 0.8);
  font-weight: 400; }

.text-primary {
  color: #fd5f00 !important; }

.topper {
  font-size: 15px;
  width: 100%;
  display: block; }
  @media (max-width: 767.98px) {
    .topper {
      margin-bottom: 10px; } }
  .topper .icon {
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    border-radius: 50%; }
    .topper .icon span {
      color: #fd5f00;
      font-size: 20px; }
  .topper .text {
    color: rgba(0, 0, 0, 0.7);
    padding-left: 15px; }
    .topper .text span {
      width: 100%;
      display: block; }
      .topper .text span:first-child {
        font-weight: 700;
        color: #000000; }
  .topper .d-block {
    width: 100%; }
  .topper .btn {
    width: 100%;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    -ms-border-radius: 0;
    border-radius: 0; }

.searchform {
  height: 54px;
  border: 1px solid rgba(255, 255, 255, 0.1);
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  border-radius: 30px; }
  .searchform .form-control {
    width: calc(100% - 52px);
    border: none;
    background: transparent !important;
    color: rgba(255, 255, 255, 0.7) !important;
    font-size: 16px; }
    .searchform .form-control::-webkit-input-placeholder {
      /* Chrome/Opera/Safari */
      color: rgba(255, 255, 255, 0.7) !important; }
    .searchform .form-control::-moz-placeholder {
      /* Firefox 19+ */
      color: rgba(255, 255, 255, 0.7) !important; }
    .searchform .form-control:-ms-input-plac255h255l255er {
      /* IE 0+ */
      color: rgba(255, 255, 255, 0.7) !important; }
    .searchform .form-control:-moz-placeholder {
      /* Firefox 18- */
      color: rgba(255, 255, 255, 0.7) !important; }
  .searchform .search {
    width: 52px;
    height: 52px; }
    .searchform .search span {
      font-size: 20px; }

.ftco-navbar-light {
  background: transparent !important;
  z-index: 3;
  padding: 0; }
  .ftco-navbar-light .container {
    background: #0d1128;
    width: 1110px; }
  @media (max-width: 991.98px) {
    .ftco-navbar-light {
      background: #0d1128 !important;
      position: relative;
      top: 0;
      padding: 10px 15px; } }
  .ftco-navbar-light .navbar-brand {
    color: #fff; }
    .ftco-navbar-light .navbar-brand:hover, .ftco-navbar-light .navbar-brand:focus {
      color: #fff; }
    @media (max-width: 991.98px) {
      .ftco-navbar-light .navbar-brand {
        color: #fff; } }
  @media (max-width: 991.98px) {
    .ftco-navbar-light .navbar-nav {
      padding-bottom: 10px; } }
  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
    font-size: 14px;
    padding-top: 1.4rem;
    padding-bottom: 1.4rem;
    padding-left: 20px;
    padding-right: 20px;
    font-weight: 400;
    color: #fff;
    opacity: 1 !important; }
    .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
      color: #fff; }
    @media (max-width: 991.98px) {
      .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
        padding-left: 0;
        padding-right: 0;
        padding-top: .9rem;
        padding-bottom: .9rem;
        color: rgba(255, 255, 255, 0.7); }
        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
          color: #fff; } }
  .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
    border: none;
    background: #fff;
    -webkit-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
    -moz-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
    box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41); }
    .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item {
      font-size: 14px; }
      .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:hover, .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:focus {
        background: transparent;
        color: #000000; }
  .ftco-navbar-light .navbar-nav > .nav-item.ftco-seperator {
    position: relative;
    margin-left: 20px;
    padding-left: 20px; }
    @media (max-width: 991.98px) {
      .ftco-navbar-light .navbar-nav > .nav-item.ftco-seperator {
        padding-left: 0;
        margin-left: 0; } }
/* ... */

